--- a/original-application/.circleci/config.yml
+++ b/original-application/.circleci/config.yml
@@ -13,7 +13,7 @@ workflows:
       - deploy-heroku:
           requires:
             - test
-          context: ChatOps
+          context: chatops
           filters:
             branches:
               only:
